# projet-vie

./: .gitignore
.github/workflows/: main.yml
cestlavie-app/: .gitignore  package-lock.json  package.json
cestlavie-app/.storybook/: preview.ts
cestlavie-app/src/: hooks.server.ts
cestlavie-app/src/lib/: config.js
cestlavie-app/src/lib/components/: BarChart.svelte  Carousel.svelte  Draggable.svelte  Gallery.svelte  HamburgerMenuButton.svelte  Header.svelte  MainNav.svelte  Microfiche.svelte  NavItem.svelte  Passport.svelte  RegionChart.svelte  Stub.svelte  StubCard.svelte  StubImage.svelte  StubWithPin.svelte  TravelTag.svelte
cestlavie-app/src/lib/components/_components/: AxisRadial.svelte  AxisY.svelte  Bar.svelte  Radar.svelte
cestlavie-app/src/lib/components/svg/: CalendarSVG.svelte  (+8 more)
cestlavie-app/src/routes/: +layout.svelte  +layout.ts  +page.svelte
cestlavie-app/src/routes/login/: +layout.svelte
cestlavie-app/src/routes/private/: +page.server.ts  +page.svelte
cestlavie-app/src/routes/stubs/: +page.svelte
cestlavie-app/src/routes/supabase/: +page.server.ts  +page.svelte
cestlavie-app/src/routes/tags/: +page.server.js  +page.svelte
cestlavie-app/src/routes/u/: +page.svelte
cestlavie-app/src/stories/: Button.svelte  Header.svelte
cestlavie-app/static/content/logs/: log-recommendations.csv  log-recommendations.toml  log-travel.csv  log-travel.toml  transportation-code-lookup.toml
cestlavie-backend/: pyproject.toml
cestlavie-backend/scripts/: toml_to_csv.py
vie-backend/scripts/: log-recommendations_toml_to_csv.py  toml_to_csv.py
(+18 files in other folders)
