[project]
name = "cestlavie-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pytesseract>=0.3.13",
    "toml>=0.10.2",
    "torch>=2.6.0",
    "torchaudio>=2.6.0",
    "torchvision>=0.21.0",
]

[project.optional-dependencies]
interactive = [
    "ipython>=9.0.2",
]
